--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -24,6 +24,7 @@
     "hardhat": "2.6.0",
     "hardhat-deploy": "^0.9.0",
     "hardhat-gas-reporter": "^1.0.4",
+    "ipfs-http-client": "^56.0.1",
     "node-watch": "^0.7.0",
     "qrcode-terminal": "^0.12.0",
     "ramda": "^0.27.1"
@@ -39,6 +40,7 @@
     "accounts": "hardhat accounts",
     "balance": "hardhat balance",
     "send": "hardhat send",
+    "mint": "hardhat run scripts/mint.js",
     "generate": "hardhat generate",
     "account": "hardhat account",
     "verify": "hardhat verify"
