--- a/packages/react-app/.sample.env
+++ b/packages/react-app/.sample.env
@@ -1,1 +1,4 @@
 # REACT_APP_PROVIDER=https://rinkeby.infura.io/v3/2717afb6bf164045b5d5468031b93f87
+# REACT_APP_ADMIN=required
+# REACT_APP_PASSWORD=required
+# REACT_APP_API=required
