--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -43,6 +43,7 @@
     "graphql": "^15.3.0",
     "ipfs-http-client": "^55.0.0",
     "isomorphic-fetch": "^3.0.0",
+    "json-beautify": "^1.1.1",
     "node-watch": "^0.7.1",
     "postcss": "^8.2.6",
     "qrcode.react": "^1.0.0",
